--- a/setup_papertrail/templates/default/log_files.yml.erb
+++ b/setup_papertrail/templates/default/log_files.yml.erb
@@ -1,7 +1,7 @@
 files:
-  - <%= @app_src %>/current/log/production.log %>
-  - <%= @app_src %>/current/log/unicorn.stderr.log %>
-  - <%= @app_src %>/current/log/unicorn.stdout.log %>
+  - <%= @app_src %>/log/production.log %>
+  - <%= @app_src %>/log/unicorn.stderr.log %>
+  - <%= @app_src %>/log/unicorn.stdout.log %>
 
 destination:
   host: logs2.papertrailapp.com
