--- a/setup_papertrail/templates/default/log_files.yml.erb
+++ b/setup_papertrail/templates/default/log_files.yml.erb
@@ -2,6 +2,7 @@ files:
   - <%= @app_src %>/log/production.log
   - <%= @app_src %>/log/unicorn.stderr.log
   - <%= @app_src %>/log/unicorn.stdout.log
+  - <%= @app_src %>/log/cron.log
 
 destination:
   host: logs2.papertrailapp.com
