--- a/batman/templates/default/nginx.conf.erb
+++ b/batman/templates/default/nginx.conf.erb
@@ -13,31 +13,52 @@ http {
   default_type  application/octet-stream;
   
   # Disable sending the server identification
-  server_tokens off;
+  # server_tokens off;
     
   # Prevent browsers from detecting the mimetype if not sent by the server.
-  add_header X-Content-Type-Options nosniff;
+  # add_header X-Content-Type-Options nosniff;
   
   # Force enable the XSS filter for the website, in case it was disabled manually
-  add_header X-XSS-Protection "1; mode=block";
+  # add_header X-XSS-Protection "1; mode=block";
   
   # Configure the cache for static assets
-  proxy_cache_path /srv/nginx_cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
+  # proxy_cache_path /srv/nginx_cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
   
   # Set the max file size for uploads (make sure it is larger than the configured media size in botpress.config.json)
-  client_max_body_size 10M;              
+  # client_max_body_size 10M;              
 
   access_log	/var/log/nginx/access.log;
   access_log off;
   error_log  /var/log/nginx/error.log;
   
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
+
+  keepalive_timeout  65;
+  keepalive_requests 100000;
+
+  client_max_body_size 60M;
+  
+  gzip  on;
+  gzip_static  on;
+  gzip_http_version 1.0;
+  gzip_comp_level 2;
+  gzip_proxied any;
+  gzip_types application/x-javascript application/xhtml+xml application/xml application/xml+rss text/css text/javascript text/plain text/xml;
+  gzip_vary on;
+  gzip_disable "MSIE [1-6].(?!.*SV1)";
+  
+  server_names_hash_bucket_size 64;
+  
+  
   # Redirect requests to the server
   server {
     listen 80 default;
     server_name  localhost;
-    if ($http_x_forwarded_proto = 'http'){
-      return 301 https://$host$request_uri;
-    }
+#    if ($http_x_forwarded_proto = 'http'){
+#      return 301 https://$host$request_uri;
+#    }
     
     # We need to add specific headers so the websockets can be set up through the reverse proxy
 #    location /socket.io/ {
