adding staging to database config

--- a/heimdall/cookbooks/opsworks_ruby/templates/default/database.yml.erb
+++ b/heimdall/cookbooks/opsworks_ruby/templates/default/database.yml.erb
@@ -1,6 +1,6 @@
 <%=
   config = {}
-  (['development', 'production'] + Array.wrap(@environment)).select(&:present?).uniq.each do |env|
+  (['development', 'production', 'staging'] + Array.wrap(@environment)).select(&:present?).uniq.each do |env|
     config[env] = @database
   end
   JSON.parse(config.to_json).to_yaml
